--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -67,8 +67,8 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       #00cc99; // $blue !default;
-$secondary:     $gray-600 !default;
+$primary:       #000; // $blue !default;
+$secondary:     #FFF;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -250,11 +250,24 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 $spacer: 1rem !default;
 $spacers: (
   0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
-  3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
+  1: $spacer * .25,/* 4 */
+  2: $spacer * .5,/* 8 */
+  3: $spacer * .75,/* 12 */
+  4: $spacer,/* 16 */
+  5: $spacer * 1.25,/* 20 */
+  6: $spacer * 1.5,/* 24 */
+  7: $spacer * 1.75,/* 28 */
+  8: $spacer * 2,/* 32 */
+  9: $spacer * 2.25,/* 36 */
+  10: $spacer * 2.5,/* 40 */
+  11: $spacer * 2.75,/* 44 */
+  12: $spacer * 3,/* 48 */
+  13: $spacer * 3.25,/* 52 */
+  14: $spacer * 3.5,/* 56 */
+  16: $spacer * 4,/* 64 */
+  17: $spacer * 5,/* 80 */
+  18: $spacer * 8,/* 128 */
+  20: $spacer * 10,/* 160 */
 ) !default;
 
 $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) !default;
@@ -286,7 +299,7 @@ $body-text-align:           null !default;
 // Style anchor elements.
 
 $link-color:                              $primary !default;
-$link-decoration:                         underline !default;
+$link-decoration:                         none !default;
 $link-shade-percentage:                   20% !default;
 $link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
 $link-hover-decoration:                   null !default;
@@ -343,7 +356,7 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns:                12 !default;
-$grid-gutter-width:           1.5rem !default;
+$grid-gutter-width:           1.875rem !default;
 $grid-row-columns:            6 !default;
 
 $gutters: $spacers !default;
@@ -441,12 +454,14 @@ $line-height-base:            1.5 !default;
 $line-height-sm:              1.25 !default;
 $line-height-lg:              2 !default;
 
-$h1-font-size:                $font-size-base * 2.5 !default;
-$h2-font-size:                $font-size-base * 2 !default;
-$h3-font-size:                $font-size-base * 1.75 !default;
-$h4-font-size:                $font-size-base * 1.5 !default;
-$h5-font-size:                $font-size-base * 1.25 !default;
-$h6-font-size:                $font-size-base !default;
+$h1-font-size:                $font-size-base * 2.5 !default;/* 40 */
+$h2-font-size:                $font-size-base * 2.25;/* 36 */
+$h3-font-size:                $font-size-base * 2;/* 32 */
+$h4-font-size:                $font-size-base * 1.75;/* 28 */
+$h5-font-size:                $font-size-base * 1.5;/* 24 */
+$h6-font-size:                $font-size-base * 1.25;/* 20 */
+$h7-font-size:                $font-size-base;
+$h8-font-size:                $font-size-base * 0.875;/* 14 */
 // scss-docs-end font-variables
 
 // scss-docs-start font-sizes
@@ -456,7 +471,9 @@ $font-sizes: (
   3: $h3-font-size,
   4: $h4-font-size,
   5: $h5-font-size,
-  6: $h6-font-size
+  6: $h6-font-size,
+  7: $h7-font-size,
+  8: $h8-font-size,
 ) !default;
 // scss-docs-end font-sizes
 
