--- a/app/assets/style/layout/_index.scss
+++ b/app/assets/style/layout/_index.scss
@@ -3,3 +3,115 @@
   font-size: 20px;
   font-weight: 400;
 }
+
+.slide-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  /* display: none; */
+  opacity: 0;
+  transition: opacity 2.5s ease-in-out;
+}
+
+.menu-btn {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+  z-index: 3;
+}
+
+.menu-burger {
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: all .3s ease-in-out;
+  position: absolute;
+}
+
+.menu-burger::before,
+.menu-burger::after {
+  content: '';
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: all .3s ease-in-out;
+  position: absolute;
+}
+
+.menu-burger::before {
+  transform: translateY(-10px);
+}
+
+.menu-burger::after {
+  transform: translateY(10px);
+}
+
+// animation
+.menu-btn.open .menu-burger {
+  transform: translateX(-50px);
+  background: transparent;
+}
+.menu-btn.open .menu-burger::before {
+  transform: rotate(45deg) translate(35px, -35px);
+}
+.menu-btn.open .menu-burger::after {
+  transform: rotate(-45deg) translate(35px, 35px);
+}
+
+.dropdown {
+  @include media-breakpoint-down(lg) {
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 100vh;
+    overflow: hidden;
+    transform: translateX(100vw);
+    background-color: #000;
+    z-index: 2;
+    transition: transform 0.1s ease-in-out;
+  } 
+  &.open {
+    @include media-breakpoint-down(lg) {
+      transform: translateX(0);
+    }
+  }
+  & li a {
+    font-size: 32px;
+    @include media-breakpoint-up(lg) {
+      font-size: 20px;
+    }
+  }
+}
+
+.topic01 {
+  position: relative;
+  text-align: center;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: 0.06em;
+}
+
+.topic01::after {
+  width: 20px;
+  height: 1px;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  background: #fff;
+  transform: translateX(-50%);
+  content: '';
+}
