--- a/app/assets/style/setting/_until.scss
+++ b/app/assets/style/setting/_until.scss
@@ -12,6 +12,246 @@
     }
 }
 
+.h-img {
+    height: 80vh!important;
+}
+
+.h-img {
+    height: 500px!important;
+    @include media-breakpoint-up(md) {
+        height: 400px!important;
+    }
+    @include media-breakpoint-up(lg) {
+        height: auto!important;
+    }
+}
+
+.img-box__ {
+    &01 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/archviz.JPG);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &02 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/about.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &03 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/q3r.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 40%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+        
+    }
+    &04 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-7.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &05 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-1.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &06 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-10.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &07 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-2.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &08 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-3.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &09 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-4.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &10 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-5.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &11 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-6.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &12 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-7.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &13 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-8.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+    &14 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-9.jpg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
+}
+
+.text-box__ {
+    &01 {
+        width: 345px;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 350px;
+        }
+    }
+}
+
 .fit {
     object-fit: cover;
 }
@@ -32,3 +272,12 @@
     font-family: 'Red Hat Text', sans-serif;
 }
 
+.fs-large {
+    font-size: 85px;
+    @include media-breakpoint-down(lg) {
+        font-size: 12vw;
+    }
+    @include media-breakpoint-down(md) {
+        font-size: 16vw;
+    }
+}
