--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -8,6 +8,8 @@
   <title>
     <%- title %>
   </title>
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/images/og_logo.png">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -17,7 +19,8 @@
 </head>
 
 <body class="bg-primary">
-  <nav class="container-fluid d-flex justify-content-between align-items-center pt-md-8 pt-4 ps-4 pe-4 ps-md-9 pe-md-9 position-fixed z-top">
+  <nav
+    class="container-fluid d-flex justify-content-between align-items-center pt-md-8 pt-4 ps-4 pe-4 ps-md-9 pe-md-9 position-fixed z-top">
     <a href="#" class="text-black">
       <h1 class="fs-5 ff-red"><img src="./assets/images/irreel-sm.png" alt=""></h1>
     </a>
@@ -35,11 +38,18 @@
   <%- contents %>
 
     <footer class="footer">
-      footer
+      <div class="container">
+        <div class="text-center">
+          <p class="ff-red">2021 &copy; Irreel Visual Art</p>
+        </div>
+      </div>
     </footer>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/58069120b7.js" crossorigin="anonymous"></script>
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
+    <script src="./assets/js/swiper.js"></script>
 </body>
 
 </html>
