--- a/app/assets/style/setting/_until.scss
+++ b/app/assets/style/setting/_until.scss
@@ -238,6 +238,21 @@
             height: 700px;
         }
     }
+    &15 {
+        width: 345px;
+        height: 400px;
+        background-image: url(../images/work/work-11.jpeg);
+        background-size: cover;
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            height: 600px;
+            background-position: 50% 50%;
+        }
+        @include media-breakpoint-up(lg) {
+            width: 550px;
+            height: 700px;
+        }
+    }
 }
 
 .text-box__ {
