--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -21,8 +21,8 @@
 <body class="bg-primary">
   <nav
     class="container-fluid d-flex justify-content-between align-items-center pt-md-8 pt-4 ps-4 pe-4 ps-md-9 pe-md-9 position-fixed z-top">
-    <a href="#" class="text-black">
-      <h1 class="fs-5 ff-red"><img src="./assets/images/irreel-sm.png" alt=""></h1>
+    <a href="#" class="text-secondary">
+      <h1 class="fs-5 ff-red fw-normal">Home</h1>
     </a>
     <div class="menu-btn d-lg-none d-flex flex-column">
       <div class="menu-burger"></div>
