--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -8,6 +8,7 @@
   <title>
     <%- title %>
   </title>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="shortcut icon" type="image/x-icon" href="./assets/images/og_logo.png">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;500;600;700&display=swap"
@@ -48,6 +49,10 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/58069120b7.js" crossorigin="anonymous"></script>
     <script src="./assets/js/vendors.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="./assets/js/all.js"></script>
     <script src="./assets/js/swiper.js"></script>
 </body>
